--- a/src/app/video-play/video-detail/video-detail.component.scss
+++ b/src/app/video-play/video-detail/video-detail.component.scss
@@ -37,6 +37,14 @@
     padding-bottom: 44px;
 }
 
+.recommends-list > i {
+    position: absolute;
+    top: 12px;
+    right: 16px;
+    color: #FFFFFF;
+    font-size: 16px;
+}
+
 .recommends-list .count {
     width: 100%;
     text-align: center;
