--- a/src/app/video-play/video-play-item/video-play-item.component.html
+++ b/src/app/video-play/video-play-item/video-play-item.component.html
@@ -28,7 +28,7 @@
             <span>收藏</span>
         </div>
         <div (click)="showCommentsClick()">
-            <i class="icon icon-icon_tp_overview"></i>
+            <i class="icon icon-icon_test"></i>
             <span>评论</span>
         </div>
       </div>
