--- a/src/app/video-play/video-detail/video-detail.component.html
+++ b/src/app/video-play/video-detail/video-detail.component.html
@@ -23,6 +23,7 @@
 
   <div class="recommends-list" [@commentAnim]="animState">
     <div class="count">{{commentCount}}条评论</div>
+    <i class="icon icon-icon_close_line" (click)="closeCommentList()"></i>
     <app-comment-item *ngFor="let commentInfo of comments" [commentInfo]="commentInfo" (reply)="replyHandler(commentInfo)"></app-comment-item>
   </div>
   <div class="input" *ngIf="animState == 'show' && currentInputType == 'comment'">
