--- a/src/app/personal-detail/personal-detail/personal-detail.component.scss
+++ b/src/app/personal-detail/personal-detail/personal-detail.component.scss
@@ -35,9 +35,9 @@
     position: absolute;
     bottom: 0;
     outline: none;
-    border: 1px solid rgba(0,0,0,0.20);
+    border: 1px solid #FFA600;
     border-radius: 2px;
-    width: 100%;
+    width: 60%;
     font-size: 12px;
     color: #666666;
     z-index: 2;
