--- a/src/app/notification/notification.component.html
+++ b/src/app/notification/notification.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <header>
-    <div>社区</div>
+    <div>通知</div>
   </header>
   <main>
     <div *ngFor="let notification of notificationList">
