--- a/src/app/video-play/video-detail/video-detail.component.scss
+++ b/src/app/video-play/video-detail/video-detail.component.scss
@@ -28,16 +28,17 @@
 
 .recommends-list {
     width: 100%;
-    height: 60%;
+    height: 80%;
     position: absolute;
     bottom: 0px;
     background-color: rgba(0, 0, 0, 0.9);
     transform: translateY(100%);
-    overflow-y: scroll;
-    padding-bottom: 44px;
+    // overflow-y: scroll;
+    // padding-bottom: 44px;
+    z-index: 100;
 }
 
-.recommends-list > i {
+.recommends-list .list-title i {
     position: absolute;
     top: 12px;
     right: 16px;
@@ -53,6 +54,13 @@
     font-size: 12px;
 }
 
+.recommends-list .list-body {
+    height: calc(100% - 41px);
+    width: 100%;
+    overflow-y: scroll;
+    padding-bottom: 44px;
+}
+
 .input {
     width: 100%;
     height: 44px;
@@ -60,6 +68,7 @@
     padding: 6px 16px;
     position: fixed;
     bottom: 0;
+    z-index: 101;
 }
 .input input {
     background-color: #000000;
