--- a/src/app/concern-list/concern-list/concern-list.component.html
+++ b/src/app/concern-list/concern-list/concern-list.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <header>
     <div class="back">
-      <i class="icon icon-icon_arrow_left" (click)="goBack()"></i>
+      <i class="icon icon-arrow-ios-forward-ou" (click)="goBack()"></i>
     </div>
     <div>我的关注</div>
   </header>
