--- a/src/app/personal-detail/personal-detail/personal-detail.component.html
+++ b/src/app/personal-detail/personal-detail/personal-detail.component.html
@@ -22,6 +22,6 @@
     </div>
   </div>
   <div class="back">
-    <i class="icon icon-icon_arrow_left" (click)="goBack()"></i>
+    <i class="icon icon-arrow-ios-forward-ou" (click)="goBack()"></i>
   </div>
 </div>
