--- a/src/app/personal/personal/personal.component.html
+++ b/src/app/personal/personal/personal.component.html
@@ -10,15 +10,15 @@
       </div>
       <div class="operates">
         <div (click)="goWorks()">
-          <i class="icon icon-icon_data"></i>
+          <i class="icon-works"></i>
           <span>作品</span>
         </div>
         <div (click)="goLikes()">
-          <i class="icon icon-icon_star"></i>
+          <i class="icon-collection"></i>
           <span>收藏</span>
         </div>
         <div (click)="goConcerns()">
-          <i class="icon icon-icon_clientlist"></i>
+          <i class="icon-concern"></i>
           <span>关注</span>
         </div>
       </div>
@@ -27,15 +27,15 @@
     <div class="func-option">
       <div>
         <span>通知开关</span>
-        <i class="icon icon-icon_arrow_right"></i>
+        <i class="icon icon-arrow-ios-forward-ou"></i>
       </div>
       <div>
         <span>功能开关</span>
-        <i class="icon icon-icon_arrow_right"></i>
+        <i class="icon icon-arrow-ios-forward-ou"></i>
       </div>
       <div>
         <span>意见反馈</span>
-        <i class="icon icon-icon_arrow_right"></i>
+        <i class="icon icon-arrow-ios-forward-ou"></i>
       </div>
       <div>
         <span>退出登录</span>
