--- a/src/app/register/register/register.component.html
+++ b/src/app/register/register/register.component.html
@@ -1,19 +1,19 @@
 <div class="register-container">
   <div class="register-form">
     <div class="userid-container">
-      <i class="icon icon-icon_head_default"></i>
+      <i class="icon icon-navigation--outline"></i>
       <input class="userid" type="text" placeholder="账号" [(ngModel)]="userId">
     </div>
     <div class="username-container">
-      <i class="icon icon-icon_edit"></i>
+      <i class="icon icon-settings-outline"></i>
       <input class="username" type="text" placeholder="用户名" [(ngModel)]="username">
     </div>
     <div class="password-container">
-      <i class="icon icon-icon_edit"></i>
+      <i class="icon icon-settings-outline"></i>
       <input class="password" type="password" placeholder="密码" [(ngModel)]="password">
     </div>
     <div class="repeat-container">
-      <i class="icon icon-icon_edit"></i>
+      <i class="icon icon-checkmark-circle--o"></i>
       <input class="password" type="password" placeholder="重复密码" [(ngModel)]="passwordCopy">
     </div>
     <button class="register-btn" (click)="register()">注册</button>
