--- a/src/app/shared/every-pick/every-pick.component.html
+++ b/src/app/shared/every-pick/every-pick.component.html
@@ -4,7 +4,7 @@
     <span>济忆精彩甄选</span>
     <div>
       <span>查看全部</span>
-      <i class="icon icon-icon_arrow_right"></i>
+      <i class="icon icon-arrow-ios-forward-ou"></i>
     </div>
   </div>
   <app-video-item [videoInfo]="videoInfo"></app-video-item>
