--- a/src/app/shared/label-bar/label-bar.component.html
+++ b/src/app/shared/label-bar/label-bar.component.html
@@ -1,31 +1,31 @@
 <div id="label-container">
   <div>
-    <i class="icon icon-icon_homepage"
+    <i class="icon icon-globe--outlinex"
     [routerLink]="[ '/home' ]"
     routerLinkActive="active"></i>
     <span>首页</span>
   </div>
 
   <div>
-    <i class="icon icon-icon_runningstate"
+    <i class="icon icon-cube-outlinex"
     [routerLink]="[ '/community' ]"
     routerLinkActive="active"></i>
     <span>社区</span>
   </div>
 
   <div class="add-video">
-    <i class="icon icon-icon_add_circle" (click)="uploadVideo()"></i>
+    <i class="icon icon-Shapex" (click)="uploadVideo()"></i>
   </div>
 
   <div>
-    <i class="icon icon-icon_paste"
+    <i class="icon icon-message-square-outli1"
     [routerLink]="[ '/notification' ]"
     routerLinkActive="active"></i>
     <span>通知</span>
   </div>
 
   <div>
-    <i class="icon icon-icon_head_default"
+    <i class="icon icon-person-add-outline"
     [routerLink]="[ '/personal' ]"
     routerLinkActive="active"></i>
     <span>我的</span>
