--- a/src/app/video-play/video-play-item/video-play-item.component.html
+++ b/src/app/video-play/video-play-item/video-play-item.component.html
@@ -20,15 +20,15 @@
       <span class="description">{{videoInfo.description}}</span>
       <div class="operations">
         <div (click)="starClick()">
-            <i class="icon icon-icon_star"></i>
+            <i class="icon icon-heart-outline"></i>
             <span>点赞</span>
         </div>
         <div (click)="likeClick()">
-            <i class="icon icon-icon_add_outline"></i>
+            <i class="icon icon-share-outline"></i>
             <span>收藏</span>
         </div>
         <div (click)="showCommentsClick()">
-            <i class="icon icon-icon_test"></i>
+            <i class="icon icon-message-square-outli1"></i>
             <span>评论</span>
         </div>
       </div>
