--- a/src/app/home/finder/finder.component.html
+++ b/src/app/home/finder/finder.component.html
@@ -3,7 +3,7 @@
     <span>热门分类</span>
     <div>
       <span>查看全部</span>
-      <i class="icon icon-icon_arrow_right"></i>
+      <i class="icon icon-arrow-ios-forward-ou"></i>
     </div>
   </div>
   <div class="finder-category-list">
