--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="login-container">
   <div class="login-form">
     <div class="userid-container">
-      <i class="icon icon-icon_head_default"></i>
+      <i class="icon icon-navigation--outline"></i>
       <input class="userid" type="text" placeholder="账号" [(ngModel)]="userId">
     </div>
     <div class="password-container">
-      <i class="icon icon-icon_edit"></i>
+      <i class="icon icon-settings-outline"></i>
       <input class="password" type="password" placeholder="密码" [(ngModel)]="password">
     </div>
     <button class="login-btn" (click)="login()">登录</button>
