--- a/src/app/register/register/register.component.scss
+++ b/src/app/register/register/register.component.scss
@@ -27,7 +27,9 @@
 
 .register-container {
     height: 100%;
-    background-image: url('../../../assets/icon/page-1.png');
+    background-image: url('../../../assets/icon/login-bg@3x.png');
+    background-repeat: no-repeat; 
+    background-size: 100% 100%;
 }
 
 .userid-container,
