login背景、部分iconfont图标

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -10,7 +10,7 @@
     </div>
     <button class="login-btn" (click)="login()">登录</button>
     <div class="register">
-      <span>创建账号</span>
+      <span (click)="goRegister()">创建账号</span>
     </div>
   </div>
 </div>
