--- a/src/app/shared/label-bar/label-bar.component.html
+++ b/src/app/shared/label-bar/label-bar.component.html
@@ -25,7 +25,7 @@
   </div>
 
   <div>
-    <i class="icon icon-person-add-outline"
+    <i class="icon icon-radio-button-on-outl"
     [routerLink]="[ '/personal' ]"
     routerLinkActive="active"></i>
     <span>我的</span>
