--- a/src/app/register/register/register.component.html
+++ b/src/app/register/register/register.component.html
@@ -18,4 +18,7 @@
     </div>
     <button class="register-btn" (click)="register()">注册</button>
   </div>
+  <div class="back">
+    <i class="icon icon-arrow-ios-forward-ou" (click)="goBack()"></i>
+  </div>
 </div>
