--- a/src/app/video-play/video-play-item/video-play-item.component.scss
+++ b/src/app/video-play/video-play-item/video-play-item.component.scss
@@ -63,8 +63,9 @@
 
 }
 .video-entity > .icon {
-    font-size: 36px;
-    color: #ffffff;
+    font-size: 48px;
+    font-weight: 900;
+    color: #FFFFFF;
     position: absolute;
     top: 50%;
     left: 50%;
