--- a/src/app/personal/personal/personal.component.html
+++ b/src/app/personal/personal/personal.component.html
@@ -38,7 +38,7 @@
         <i class="icon icon-arrow-ios-forward-ou"></i>
       </div>
       <div>
-        <span>退出登录</span>
+        <span (click)="logout()">退出登录</span>
       </div>
     </div>
 
