--- a/src/app/shared/video-thumbnail/video-thumbnail.component.html
+++ b/src/app/shared/video-thumbnail/video-thumbnail.component.html
@@ -1,5 +1,5 @@
 <div class="video-thumbnail-container">
-  <img [src]="videoInfo.thumbnailUri">
+  <img [src]="nodeUrl + '/video/thumbnail/' + videoInfo.thumbnailUri">
   <div class="video-desc">
     <span class="title" [ngStyle]="{'color': titleColor}">{{videoInfo.title}}</span>
     <span class="description" [ngStyle]="{'color': descColor}">{{videoInfo.subTitle}}</span>
