--- a/src/app/shared/label-bar/label-bar.component.scss
+++ b/src/app/shared/label-bar/label-bar.component.scss
@@ -25,3 +25,18 @@
     // top: 8px;
     font-size: 36px !important;
 }
+
+.progress {
+    width: 100%;
+    height: 48px;
+    position: absolute;
+    top: -52px;
+    color: rgb(255, 166, 0);
+    background-color: rgb(250, 250, 250);
+    box-shadow: 2px 0 2px 0 rgba(0, 0, 0, 0.2);
+    z-index: 2;
+    text-align: left;
+    vertical-align: middle;
+    padding: 16px 16px 0 16px;
+    // border: 1px solid rgba(0, 0, 0, 0.2);
+}
