--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -1,22 +1,22 @@
-<div class="upload-container">
+<div class="main-container upload-container">
   <header>
     <span>取消</span>
-    <div>选择视频</div>
+    <span>选择视频</span>
     <span>发布</span>
   </header>
   <main>
-    <img src="../../assets/icon/campus.jpeg">
+    <img *ngIf="thumbnailUri" [src]="thumbnailUri">
     <div>
       <p>视频名称</p>
-      <ion-input type="text" [(ngModel)]="title"></ion-input>
+      <input type="text" [(ngModel)]="title"/>
     </div>
     <div>
       <p>副标题</p>
-      <ion-input type="text" [(ngModel)]="subTitle"></ion-input>
+      <input type="text" [(ngModel)]="subTitle"/>
     </div>
     <div>
       <p>视频描述</p>
-      <ion-textarea type="text" [(ngModel)]="description"></ion-textarea>
+      <textarea type="text" [(ngModel)]="description"></textarea>
     </div>
   </main>
 </div>
