--- a/src/global.scss
+++ b/src/global.scss
@@ -29,6 +29,10 @@ html {
     height: 100%;
 }
 
+.main-container header {
+    margin-bottom: 8px;
+}
+
 header {
     flex: 0 1 auto;
     width: calc(100% - 32px);
