--- a/src/app/home/concern/concern.component.html
+++ b/src/app/home/concern/concern.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="concern-list-container">
+  <div class="concern-list-container" *ngIf="concernList && concernList.length > 0">
     <div class="avator-list">
       <img [src]="nodeUrl + '/users/avator/' + concern[0].userId" *ngFor="let concern of concernList" (click)="showUserInfo(concern[0].userId)">
     </div>
