拍摄上传视频完成 & fix bug

--- a/src/app/home/recommend/recommend.component.scss
+++ b/src/app/home/recommend/recommend.component.scss
@@ -24,7 +24,7 @@
     color: #333333;
 }
 
-.category-list-header .icon-icon_arrow_right {
+.category-list-header .icon-arrow-ios-forward-ou {
     color: #FFA600;
-    font-size: 14px;
+    font-size: 18px;
 }
