--- a/src/app/home/recommend/recommend.component.html
+++ b/src/app/home/recommend/recommend.component.html
@@ -5,7 +5,7 @@
   <div class="category-list-container" *ngFor="let video of videoList">
     <div class="category-list-header">
       <span>{{video.category | translate }}</span>
-      <i class="icon icon-icon_arrow_right"></i>
+      <i class="icon icon-arrow-ios-forward-ou" (click)="goCategory(video.category)"></i>
     </div>
     <app-video-list [videoList]="video.videos"></app-video-list>
   </div>
