--- a/src/app/notification/notification-item/notification-item.component.html
+++ b/src/app/notification/notification-item/notification-item.component.html
@@ -1,5 +1,5 @@
 <div class="notification-container">
-  <img [src]="nodeUrl + '/users/avator/' + notification.userId">
+  <img [src]="nodeUrl + '/users/avator/' + notification.authorId">
   <div class="detail">
     <div class="userInfo" (click)="goUserInfo()">
       <p>{{notification.username}}</p>
