--- a/src/app/shared/label-bar/label-bar.component.scss
+++ b/src/app/shared/label-bar/label-bar.component.scss
@@ -13,14 +13,24 @@
 
 #label-container > div > i {
     font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 4px;
 }
 
 .active {
-    color: #FFA600;
+    // color: #FFA600;
+    background-image: linear-gradient(to right, #FFEC86, #E6A102); 
+    // -webkit-background-clip: text; 
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .icon-Shapex {
-    color: #FFA600;
+    // color: #FFA600;
+    background-image: linear-gradient(to right, #FFEC86, #E6A102); 
+    // -webkit-background-clip: text; 
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     position: relative;
     // top: 8px;
     font-size: 36px !important;
@@ -28,7 +38,7 @@
 
 .progress {
     width: 100%;
-    height: 48px;
+    height: 52px;
     position: absolute;
     top: -52px;
     color: rgb(255, 166, 0);
@@ -40,3 +50,10 @@
     padding: 16px 16px 0 16px;
     // border: 1px solid rgba(0, 0, 0, 0.2);
 }
+
+// i {
+//     background-image: linear-gradient(to right, #FFEC86, #E6A102); 
+//     // -webkit-background-clip: text; 
+//     background-clip: text;
+//     -webkit-text-fill-color: transparent;
+// }
